Fix menu on mobile
http://stackoverflow.com/a/38796408/283607

--- a/packages/daheim-app-ui/src/default.css
+++ b/packages/daheim-app-ui/src/default.css
@@ -16,6 +16,7 @@ body, html {
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
 	/*height: 100%;*/
+	transform: translateZ(0);
 }
 
 
